force-app/main/default/objects/Error_Log__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Message Type</label>
    <referenceTo>Message_Type__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>