force-app/main/default/objects/Error_Log__c/fields/MSN_ClassName__c.field-meta.xml
<CustomField>
    <fullName>MSN_ClassName__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>