force-app/main/default/objects/Error_Log__c/fields/MSN_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>MSN_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>