force-app/main/default/objects/Error_Log__c/fields/MSN_Has_been_reviewed__c.field-meta.xml
<CustomField>
    <fullName>MSN_Has_been_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been reviewed?</label>
    <type>Checkbox</type>
</CustomField>