force-app/main/default/objects/Error_Log__c/fields/MSN_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>MSN_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>