force-app/main/default/objects/Error_Log__c/fields/MSN_MethodName__c.field-meta.xml
<CustomField>
    <fullName>MSN_MethodName__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>