force-app/main/default/objects/Error_Log__c/fields/MSN_Payload__c.field-meta.xml
<CustomField>
    <fullName>MSN_Payload__c</fullName>
    <description>Payload sent/received by API communication</description>
    <label>Payload</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>