force-app/main/default/objects/Error_Log__c/fields/MSN_Process_type__c.field-meta.xml
<CustomField>
    <fullName>MSN_Process_type__c</fullName>
    <label>Process type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>