force-app/main/default/objects/Error_Log__c/fields/MSN_Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>MSN_Source_Record_ID__c</fullName>
    <label>Source Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>