force-app/main/default/objects/Error_Log__c/fields/MSN_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>MSN_StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>