force-app/main/default/objects/Error_Log__c/fields/Process_type__c.field-meta.xml
<CustomField>
    <fullName>Process_type__c</fullName>
    <label>Process type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>