force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>MSN_Has_been_reviewed__c</columns>
    <columns>MSN_Process_type__c</columns>
    <columns>MSN_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>